# src/openapi/openapi.yaml
@@ -3,9 +3,19 @@ info:
   title: 'catlife API'
   version: '0.1'
 paths:
+  /api/cats:
+    get:
+      summary: 'Display a listing of the resource.'
+      operationId: 37b784597020a23064dfd2b60befdd41
+      responses:
+        '200':
+          description: 'get all cats'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CatCollection'
   /api/cats/:
     post:
-      summary: 'Store a newly created resource in storage.'
       operationId: 1aa267fe99be0276c75a4bbe479ac733
       requestBody:
         required: true
@@ -29,6 +39,10 @@ paths:
                   description: 'cat''s description'
                   type: string
                   example: 'something you want to take a memo'
+                picture:
+                  description: 'picture for the cat'
+                  type: string
+                  format: binary
               type: object
       responses:
         '200':
@@ -440,6 +454,17 @@ components:
           example: user1@example.com
       type: object
   responses:
+    '500':
+      description: 'failed to save a file'
+      content:
+        application/json:
+          schema:
+            properties:
+              message:
+                description: 'error message'
+                type: string
+                example: 'Save file failed. Please try again later'
+            type: object
     '400':
       description: 'failed to create'
       content:
